--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "npx standard",
     "lint:fix": "npx standard --fix",
     "test": "cypress run",
+    "nyan": "cypress run --reporter nyan",
     "cy:open": "cypress open"
   },
   "standard": {
@@ -32,9 +33,9 @@
   "license": "MIT",
   "homepage": "https://github.com/wlsf82/curso-cypress-avancado#readme",
   "devDependencies": {
-    "cypress": "^12.6.0",
-    "cypress-localstorage-commands": "^2.2.2",
-    "faker": "^5.5.3",
+    "cypress": "^12.8.0",
+    "cypress-localstorage-commands": "^1.7.0",
+    "faker": "^5.4.0",
     "standardjs": "^1.0.0-alpha"
   }
 }
